--- a/wildriftelo.service
+++ b/wildriftelo.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=BodeDotEXE
+Description=wildriftelo
 Wants=network-online.target
 After=network-online.target systemd-networkd-wait-online.service
 
@@ -8,7 +8,7 @@ StartLimitBurst=5
 
 [Service]
 Type=idle
-ExecStart=/usr/bin/python3 /home/pi/tbodedotexe/bot.py
+ExecStart=/usr/bin/python3 /home/pi/wildriftelo/bot.py
 Restart=on-failure
 RestartSec=10s
 
